# llm-efficiency-lab

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/reports/: week01.md  week02.md  week03.md  week04.md
scripts/: bench_concurrent.py  bench_http.sh  bench_scheduling_sweep.py  bench_workers.py  plot_week02.py
src/efflab/common/: config.py
src/efflab/engine/: batcher.py  kv_cache.py  model_loader.py  request.py  runner.py  scheduler.py  server_fastapi.py
src/efflab/profiler/: collectors.py
src/efflab/structured/: decoder.py
tests/: test_batcher_fair_scheduling.py  test_generation_regression.py  test_imports.py
