[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efflab"
version = "0.1.0"
description = "LLM efficiency experiments"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "accelerate",
  "fastapi",
  "uvicorn",
  "pydantic",
  "numpy",
  "matplotlib",
  "psutil",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
